--- a/src/app/components/youtube-player/youtube-player.component.css
+++ b/src/app/components/youtube-player/youtube-player.component.css
@@ -1,6 +1,7 @@
+#duration-bar {
+  width: 100%;
+}
+
 .disabled {
   opacity: 0.5;
-}
-.duration-bar{
-    width: 100%;
 }
